# lttbc

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  README.txt  lttbc.c  pyproject.toml  setup.py  test_downsample.py  tox.ini
.github/workflows/: python-app.yml
src/lttbc/: lttbc.c
tests/: test_downsample.py
