[build-system]
requires = [
    "setuptools>=51.0",
    "wheel>=0.36",
    "numpy==1.22"
]
build-backend = "setuptools.build_meta"

[project]
name = "lttbc"
version = "0.2.4"
description ="Largest triangle three buckets module for Python written in C"
dynamic = ["readme"]
requires-python = ">=3.8"
authors = [
  {name = "European XFEL GmbH", email = "dennis.goeries@xfel.eu"}
]
maintainers = [
  {name = "Dennis Goeries", email = "dennis.goeries@xfel.eu"},
]
dependencies = [
    "numpy>=1.22",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
[project.urls]
"git" = "https://github.com/dgoeries/lttbc"


[tool.setuptools.dynamic]
readme = {file = ["README.txt"], content-type = "text/markdown"}
